2002-01-05  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Look for Rules-* files in the source dir,
	not in the build dir.

2002-01-04  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): If no intl directory exists and GNU
	gettext was not found in libc or preinstalled libintl, don't define
	ENABLE_NLS, and set USE_NLS to 'no'.

2001-12-12  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Reject xgettext versions that don't
	support the --copyright-holder option.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4: New file, inspired by autoconf-2.13 and autoconf-2.52.
	* Makefile.am (EXTRA_DIST): Add it.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* getline.m4 (AM_FUNC_GETLINE): Include <stdlib.h>, not <sys/types.h>,
	for declaring size_t and exit().  #define getline to a different
	symbol at linkage level.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Fix typo in jikes test.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Don't insert obsolete Rules-* files into
	the Makefile.

2001-12-03  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Fix construction of Makefile if
	builddir != srcdir.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* lib-ld.m4: New file, extracted from libtool-1.4 libtool.m4.
	* lib-link.m4: New file.
	* lib-prefix.m4: New file.
	* Makefile.am (aclocal_DATA): Add them.
	(EXTRA_DIST): Likewise.
	* iconv.m4 (AM_ICONV): Remove AC_ARG_WITH call. Invoke
	AC_LIB_LINKFLAGS_BODY. Use $LIBICONV instead of "-lintl". Add
	$INCICONV to CPPFLAGS if appropriate.
	* gettext.m4 (AM_WITH_LIBINTL): Remove macro.
	(AM_GNU_GETTEXT): Invoke AC_LIB_LINKFLAGS_BODY. Use $LIBINTL instead
	of "-lintl $LIBICONV". Add $INCINTL to CPPFLAGS if appropriate.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Avoid an error message if there is
	no Rules-* file.

2001-12-04  Bruno Haible  <bruno@clisp.org>
